--- a/book-id-agent.yaml
+++ b/book-id-agent.yaml
@@ -1,44 +1,36 @@
 agent:
-  name: book_identifier_test
-  description: "Identifies bibliographic facts, condition, and pricing guidance for eBay book listings."
+  name: keith_book_identifier
+  description: "Generates eBay listing essentials (title, price, condition code, description, image URLs)."
   model:
     type: o3
     max_output_tokens: 2000
     reasoning:
       effort: medium
   system_prompt: |
-    You are an experienced antiquarian bookseller preparing persuasive eBay listings from supplied book images and their public URLs.
+    You are an experienced antiquarian bookseller creating eBay-ready listing data from supplied book images and their public URLs.
 
-    Responsibilities
-    - Identify bibliographic facts: title, author, publication year, publisher & location, edition/printing, format/binding, notable features (illustrators, signatures, provenance, series), language, and other collector-relevant distinctions.
-    - Assess physical condition using the AB Bookman hierarchy (As New, Fine, Near Fine, Very Good, Good, Fair, Poor). Inspect boards and spine, text block, dust jacket, edges, hinges, markings, completeness, and odor. Grade conservatively but highlight sale-worthy strengths to support strong pricing.
-    - Map the observed grade to the correct eBay Condition ID:
-      1000 New - unread, flawless.
-      2750 Like New - looks new, read once at most, no wear.
-      3000 Very Good - lightly used, minimal wear.
-      5000 Good - noticeable wear yet sound, no missing pages.
-      6000 Acceptable - well worn, readable, may have significant cosmetic flaws.
-      Choose the closest code and mention key evidence in the condition notes.
-    - Craft outputs that motivate confident purchase decisions:
-      * blurb: 120-180 word sales copy summarising why the book is desirable.
-      * condition: ABAA-style narrative covering boards/spine, pages/text block, dust jacket, hinges, edges, markings, odors, completeness.
-      * details: collector highlights (edition points, inscriptions, provenance, rarity, market positioning).
-      * price: USD float informed by comparable sales; justify premium when condition allows.
-      * image_urls: pipe-delimited S3 URLs in listing order (primary photo first).
-    - Use concise, professional tone. Surface defects candidly while emphasising preservation, originality, and collector appeal.
+    Tasks
+    - Identify the correct listing title and author.
+    - Determine a competitive fixed-price recommendation in USD based on condition and comparable sales.
+    - Write the final Description paragraph(s) to paste directly into the eBay template. Combine selling blurb, concise condition narrative, and key collector notes into one polished block. Keep it compelling but factual.
+    - Assign the matching eBay Condition ID:
+      1000 New (unread, flawless)
+      2750 Like New (looks new, read once, no visible wear)
+      3000 Very Good (light use, minimal wear)
+      5000 Good (noticeable cosmetic wear but structurally sound)
+      6000 Acceptable (well worn yet complete/readable)
+    - Return the pipe-delimited list of HTTPS image URLs in the order they should appear (primary photo first). Do not include extra spaces around the pipe character.
 
-    Always return JSON that matches the declared schema.
+    Output the JSON schema exactly. Do not add new keys. Trim whitespace and avoid Markdown.
   user_prompt: >
-    Analyze the attached book images and follow the workflow to produce structured JSON for the listing.
+    Analyze the provided book images and produce the structured JSON needed for the eBay listings spreadsheet.
   image_dir: batch-image-sets
   output_schema:
     type: object
     required:
       - title
       - author
-      - blurb
-      - condition
-      - details
+      - description
       - price
       - condition_id
       - image_urls
@@ -47,29 +39,17 @@ agent:
         type: string
       author:
         type: string
-      blurb:
-        type: string
-      condition:
-        type: string
-      details:
+      description:
         type: string
       price:
         type: number
         format: float
       condition_id:
         type: string
-        description: "One of: 1000, 2750, 3000, 5000, 6000."
+        description: "Use one of: 1000, 2750, 3000, 5000, 6000."
       image_urls:
         type: string
-        description: "Pipe-delimited list of HTTPS image URLs in display order."
-      language:
-        type: string
-      publisher:
-        type: string
-      publication_year:
-        type: string
-      edition:
-        type: string
+        description: "Pipe-delimited list of HTTPS image URLs with no spaces."
   csv_output:
     enabled: true
     include_header: true
@@ -109,7 +89,6 @@ agent:
       "Start price": "{price}"
       "Item photo URL": "{image_urls}"
       "Condition ID": "{condition_id}"
-      "Description": "{blurb}\n\nCondition Notes:\n{condition}\n\nCollector Details:\n{details}"
+      "Description": "{description}"
       "C:Author": "{author}"
       "C:Book Title": "{title}"
-      "C:Language": "{language}"
